# model_deployment_with_ecs

./: pyproject.toml
classification_model/: __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
classification_model/config/: core.py
classification_model/processing/: data_manager.py  validation.py
titanic_api/: config.yml  get_model.py  predict.py  preprocessing.py  test_prediction.py
titanic_api/config/: core.py
titanic_api/schemas/: data_schemas.py
